--- a/src/main/resources/templates/settings/profile.html
+++ b/src/main/resources/templates/settings/profile.html
@@ -10,15 +10,7 @@
 
     <div class="row mt-5 justify-content-center">
         <div class="col-2">
-<!--        <div th:replace="fragements.html :: settings-menu(currnetMenu='profile')"></div>-->
-            <div class="list-group">
-                <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'profile'}? active" href="#" th:href="@{/settings/profile}">프로필</a>
-                <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'password'}? active" href="#" th:href="@{/settings/password}">패스워드</a>
-                <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'notifications'}? active" href="#" th:href="@{/settings/notifications}">알림</a>
-                <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'tags'}? active" href="#" th:href="@{/settings/tags}">관심 주제</a>
-                <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'zones'}? active" href="#" th:href="@{/settings/zones}">활동 지역</a>
-                <a class="list-group-item list-group-item-action list-group-item-danger" th:classappend="${currentMenu == 'account'}? active" href="#" th:href="@{/settings/account}">계정</a>
-            </div>
+            <div th:replace="fragements.html :: settings-menu(currentMenu='profile')"></div>
         </div>
         <div class="col-8">
             <div th:if="${message}" class="alert alert-info alert-dismissible fade show mt-3" role="alert">
@@ -69,7 +61,7 @@
                 <div class="form-group">
                     <label for="location">활동 지역</label>
                     <input id="location" type="text" th:field="*{location}" class="form-control"
-                           placeholder="Redmond, WA, USA"
+                           placeholder="Redmond, SEOUL, KOREA"
                            aria-describedby="locationdHelp" required>
                     <small id="locationdHelp" class="form-text text-muted">
                         주요 활동(사는 곳이나 직장을 다니는 곳 또는 놀러 다니는 곳) 지역의 도시 이름을 알려주세요.
