--- a/src/main/resources/templates/fragements.html
+++ b/src/main/resources/templates/fragements.html
@@ -193,7 +193,7 @@
             <span sec:authorize="isAuthenticated()"
                   th:if="${!hobby.closed && hobby.isMember(#authentication.principal)}" class="btn-group" role="group">
                     <a class="btn btn-outline-warning" th:href="@{'/hobby/' + ${hobby.path} + '/leave'}">
-                        스터디 탈퇴
+                        Hobby 탈퇴
                     </a>
                     <a class="btn btn-outline-primary" th:href="@{'/hobby/' + ${hobby.path} + '/members'}"
                        th:text="${hobby.members.size()}">1</a>
@@ -259,5 +259,40 @@
             </div>
         </li>
     </ul>
+</div>
+
+
+<div th:fragment="hobby-settings-menu (currentMenu)" class="list-group">
+    <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'description'}? active"
+       href="#" th:href="@{'/hobby/' + ${hobby.path} + '/settings/description'}">소개</a>
+    <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'image'}? active"
+       href="#" th:href="@{'/hobby/' + ${hobby.path} + '/settings/image'}">배너 이미지</a>
+    <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'tags'}? active"
+       href="#" th:href="@{'/hobby/' + ${hobby.path} + '/settings/tags'}">Hobby 주제</a>
+    <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'zones'}? active"
+       href="#" th:href="@{'/hobby/' + ${hobby.path} + '/settings/zones'}">활동 지역</a>
+    <a class="list-group-item list-group-item-action list-group-item-danger" th:classappend="${currentMenu == 'hobby'}? active"
+       href="#" th:href="@{'/hobby/' + ${hobby.path} + '/settings/hobby'}">Hobby</a>
+</div>
+
+<div th:fragment="editor-script">
+    <script src="/node_modules/summernote/dist/summernote-bs4.js"></script>
+    <script type="application/javascript">
+        $(function () {
+            $('#fullDescription').summernote({
+                fontNames: ['Arial', 'Arial Black', 'Comic Sans MS', 'Courier New', 'Noto Sans KR', 'Merriweather'],
+                placeholder: 'Hobby의 목표, 일정, 진행 방식, 사용할 교재 또는 인터넷 강좌 그리고 모집중인 Hobby원 등 Hobby에 대해 자세히 적어 주세요.',
+                tabsize: 2,
+                height: 300
+            });
+        });
+    </script>
+</div>
+
+<div th:fragment="message" th:if="${message}" class="alert alert-info alert-dismissible fade show mt-3" role="alert">
+    <span th:text="${message}">완료</span>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
 </div>
 </html>
