--- a/src/main/resources/templates/hobby/form.html
+++ b/src/main/resources/templates/hobby/form.html
@@ -64,16 +64,6 @@
     <div class="fragements.html :: footer"></div>
 </div>
 <script th:replace="fragements.html :: form-validation"></script>
-<script src="/node_modules/summernote/dist/summernote-bs4.js"></script>
-<script type="application/javascript">
-    $(function () {
-        $('#fullDescription').summernote({
-            fontNames: ['Arial', 'Arial Black', 'Comic Sans MS', 'Courier New', 'Noto Sans KR', 'Merriweather'],
-            placeholder: 'Hobby의 목표, 일정, 진행 방식, 사용할 교재 또는 인터넷 강좌 그리고 모집중인 Hobby원 등 Hobby에 대해 자세히 적어 주세요.',
-            tabsize: 2,
-            height: 300
-        });
-    });
-</script>
+<script th:replace="fragements.html :: editor-script"></script>
 </body>
 </html>
