--- a/src/main/resources/templates/hobby/settings/description.html
+++ b/src/main/resources/templates/hobby/settings/description.html
@@ -29,7 +29,7 @@
 
                 <div class="form-group">
                     <label for="fullDescription">상세 소개</label>
-                    <textarea id="fullDescription" type="textarea" th:field="*{fullDescription}" class="form-control"
+                    <textarea id="fullDescription" type="textarea" th:field="*{fullDescription}" class="editor form-control"
                               placeholder="Hobby를 자세히 설명해 주세요." aria-describedby="fullDescriptionHelp" required></textarea>
                     <small id="fullDescriptionHelp" class="form-text text-muted">
                         Hobby의 목표, 일정, 진행 방식, 사용할 교재 또는 인터넷 강좌 그리고 모집중인 Hobby원 등 Hobby에 대해 자세히 적어 주세요.
