--- a/src/main/resources/templates/fragements.html
+++ b/src/main/resources/templates/fragements.html
@@ -87,7 +87,8 @@
             <li class="nav-item" sec:authorize="isAuthenticated()">
                 <a class="nav-link" href="#" th:href="@{/notification}">
                     <!--font-awesome 벨 추가-->
-                    <i class="fa fa-bell-o" aria-hidden="true"></i>
+                    <i th:if="${!hasNotification}" class="fa fa-bell-o" aria-hidden="true"></i>
+                    <span class="text-info" th:if="${hasNotification}"><i class="fa fa-bell" aria-hidden="true"></i></span>
                 </a>
             </li>
             <li class="nv-item" sec:authorize="isAuthenticated()">
